--- a/index.html
+++ b/index.html
@@ -176,18 +176,18 @@
 
     <div class="trust-item">
       <div class="slider slider-large">
-        <img src="mec/En3.png" class="active">
-        <img src="mec/En2.png">
-        <img src="mec/En4.png">
-        <img src="mec/En5.png">
-        <img src="mec/En6.png">
-        <img src="mec/En7.png">
-        <img src="mec/En8.png">
-        <img src="mec/En9.png">
-        <img src="mec/En10.png">
-        <img src="mec/En11.png">
-        <img src="mec/En12.png">
-        <img src="mec/En13.png">
+        <img src="En3.png" class="active">
+        <img src="En2.png">
+        <img src="En4.png">
+        <img src="En5.png">
+        <img src="En6.png">
+        <img src="En7.png">
+        <img src="En8.png">
+        <img src="En9.png">
+        <img src="En10.png">
+        <img src="En11.png">
+        <img src="En12.png">
+        <img src="En13.png">
         <button class="prev">‹</button>
         <button class="next">›</button>
       </div>
@@ -214,13 +214,13 @@
 
   <div class="portfolio-slider">
     <div class="slider slider-portfolio">
-      <img src="p/p1.jpg" class="active">
-      <img src="p/p3.png">
-      <img src="p/p4.png">
-      <img src="p/p5.png">
-      <img src="p/p6.png">
-      <img src="p/p7.png">
-      <img src="p/p8.png">
+      <img src="p1.jpg" class="active">
+      <img src="p3.png">
+      <img src="p4.png">
+      <img src="p5.png">
+      <img src="p6.png">
+      <img src="p7.png">
+      <img src="p8.png">
       <button class="prev">‹</button>
       <button class="next">›</button>
     </div>
@@ -391,4 +391,5 @@
 
 </body>
 </html>
+
 
