--- a/index.html
+++ b/index.html
@@ -164,9 +164,9 @@
 
     <div class="trust-item">
       <div class="slider slider-large">
-        <img src="deli/d1.jpg" class="active">
-        <img src="deli/d2.jpg">
-        <img src="deli/d3.jpg">
+        <img src="d1.jpg" class="active">
+        <img src="d2.jpg">
+        <img src="d3.jpg">
         <button class="prev">‹</button>
         <button class="next">›</button>
       </div>
@@ -391,5 +391,6 @@
 
 </body>
 </html>
+
 
 
